<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newspluse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        android:textColor="@color/mainColor"
        android:id="@+id/appName"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        android:layout_marginTop="@dimen/_10sdp"
        android:scrollbars="none"
        android:id="@+id/horizontalView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnGeneral"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnBusiness"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnEntertainment"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnHealth"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnScience"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/btnSports"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology"
                android:backgroundTint="@color/mainColor"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/white"
                android:id="@+id/btnTechnology"/>

        </LinearLayout>

    </HorizontalScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/fragmentsContainer"/>
</androidx.constraintlayout.widget.ConstraintLayout>