<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/cardColor"
    app:cardCornerRadius="@dimen/_20sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/newImage"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newImage"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/title"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/newTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            app:layout_constraintStart_toStartOf="@id/newTitle"
            app:layout_constraintTop_toBottomOf="@id/newTitle"
            android:textColor="@color/descriptionColor"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/authorName"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/authorName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorName"
            android:text="@string/description"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/descriptionColor"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>